代码整理与简化，比如语句 lambda 替换成 表达式 lambda